Bug 361154: Drop support for pre-Win2k platforms from Win32 widgets, patch by Ryan Jones <bugs@ryan-jones.com>, r=ere, sr=roc